feat: increase coordinate precision in location input fields

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -134,7 +134,7 @@
                   type='number'
                   id='lat'
                   name='lat'
-                  step='0.0001'
+                  step="0.000001" 
                   placeholder='مثال: 40.7128'
                   value='{{inputLat}}'
                   required
@@ -146,7 +146,7 @@
                   type='number'
                   id='lng'
                   name='lng'
-                  step='0.0001'
+                  step="0.000001" 
                   placeholder='مثال: -74.0060'
                   value='{{inputLng}}'
                   required
