refactor: remove debug console.log and hide location input on success

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -98,7 +98,7 @@
               </div>
             {{/if}}
           {{/if}}
-
+      {{#unless success}}
           <div class='input-section'>
           <h3> <svg
                   xmlns='http://www.w3.org/2000/svg'
@@ -159,6 +159,7 @@
             </div>
           </form>
         </div>
+      {{/unless}}
       </div>
     </div>
 
